# odl-lang

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SPEC.md  VISION.md  llms.txt  pyproject.toml
src/odl/: __init__.py  utils.py
src/odl/compiler/: core.py  exceptions.py
src/odl/compiler/pipeline/: assembler.py  expander.py  parser.py  resolver.py
src/odl/compiler/rules/: syntax.py  wiring.py
src/odl/types/: __init__.py  constants.py  enums.py  ir.py
tests/integration/: conftest.py  test_compiler_integration.py
tests/integration/specs/success/: cocrea.5110.yml  cocrea.5120.yml  cocrea.5130.yml
tests/unit/: test_utils.py
tests/unit/compiler/: test_core.py
tests/unit/compiler/pipeline/: test_assembler.py  test_expander.py  test_parser.py  test_resolver.py
tests/unit/compiler/rules/: test_syntax.py  test_wiring.py
tests/unit/types/: test_enums.py  test_ir.py
